--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "@vue/composition-api": "^1.7.1",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
+    "axios": "^0.21.4",
     "bootstrap": "^5.0.2",
-    "bootstrap-vue": "^2.21.2",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
     "eslint-loader": "^2.1.2",
+    "swagger-ui-dist": "^4.18.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.6.5",
+    "vue2-datepicker": "^3.11.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
